content/manual/versions/v4.2/source/includes/table-sessions-commands.rst
.. list-table::
   :header-rows: 1
   :widths: 40  30

   * - Commands
     - Descriptions

   * - :dbcommand:`abortTransaction`

     - Abort transaction.

       .. versionadded:: 4.0

   * - :dbcommand:`commitTransaction`

     - Commit transaction.

       .. versionadded:: 4.0

   * - :dbcommand:`endSessions`

     - Expire sessions before the sessions' timeout period.

       .. versionadded:: 3.6

   * - :dbcommand:`killAllSessions`

     - Kill all sessions.

       .. versionadded:: 3.6

   * - :dbcommand:`killAllSessionsByPattern`

     - Kill all sessions that match the specified pattern

       .. versionadded:: 3.6

   * - :dbcommand:`killSessions`

     - Kill specified sessions.

       .. versionadded:: 3.6

   * - :dbcommand:`refreshSessions`

     - Refresh idle sessions.

       .. versionadded:: 3.6

   * - :dbcommand:`startSession`

     - Starts a new session.

       .. versionadded:: 3.6
